# update_course_project

newclient/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
newserver/: CMakeLists.txt  main.cpp  newserver.cpp  newserver.h
newserver/build1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  install_manifest.txt  newserver.sln  newserver.vcxproj  newserver.vcxproj.filters
newserver/build1/newserver.dir/Debug/: newserver.exe.recipe  newserver.ilk
newserver/build1/newserver.dir/Debug/newserver.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  newserver.lastbuildstate
newserver/build1/newserver_autogen/: mocs_compilation_Debug.cpp
newserver/build1/newserver_autogen/include_Debug/EWIEGA46WW/: moc_newserver.cpp  moc_newserver.cpp.d
newserver/build1/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
newserver/build1/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.write.1.tlog
newserver/build1/x64/Debug/INSTALL/: INSTALL.recipe
newserver/build1/x64/Debug/INSTALL/INSTALL.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
newserver/build1/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
newserver/build1/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
